# ai-pdf-analyzer-rag

./: README.md  default.conf  docker-compose.yml  generateReadme.js
ai-pdf-frontend/: .dockerignore  Dockerfile  default.conf  next.config.ts  package-lock.json  package.json
ai-pdf-frontend/src/app/: globals.css  layout.tsx  page.tsx
ai-pdf-frontend/src/app/src/api/: api.ts
python_backend/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
python_backend/app/: main.py
python_backend/app/api/v1/: pdf_upload.py  search.py
python_backend/app/core/: celery_app.py  config.py  database.py
python_backend/app/models/: pdf.py  pdf_vector.py  search.py
python_backend/app/services/: embedding_service.py  llm_service.py  pdf_service.py  search_service.py  storage.py
python_backend/app/utils/: hash.py
python_backend/app/worker/: tasks.py
